--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,6 +1,6 @@
 .userImg {
-  max-width: 60%;
-  max-height: 60%;
+  max-width: 70%;
+  max-height: 70%;
   border: 20px dashed #8a6c6c;
   -webkit-transition: border 300ms ease-out;
 }
